changed some colors

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4839,10 +4839,9 @@ a.badge:focus {
 }
 .jumbotron {
   padding: 30px 15px;
-  background-image: (images/blooms.jpg);
   margin-bottom: 30px;
-  color: inherit;
-  background-color: #eee;
+  color: white;
+  background-color: #99CCFF;
 }
 .jumbotron h1,
 .jumbotron .h1 {
